(lang dune 3.23)

(name cbor)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author William Hergès <anhgelus.morhtuuzh@proton.me>") 

(maintainers "Maintainer William Hergès <anhgelus.morhtuuzh@proton.me>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name cbor)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
